src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AIV_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if a Product is an AIV product and access has to be granted.</description>
        <label>AIV Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <description>Used to assign a Product to a specific Price List</description>
        <label>Accounting Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Description__c</fullName>
        <description>Translation for the Account Code</description>
        <label>Accounting Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Book_Restriction__c</fullName>
        <description>Used to display to indicate if the Answer Book Restriction exists</description>
        <label>Answer Book Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Restriction ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standalone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Semester_Type__c</fullName>
        <description>updated by workflow to populate the semester and Type
this field will be used in Apttus Bundle page</description>
        <label>Apttus Semester Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Used to indicate the Audience for the Product</description>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Instructors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>CORE - Name of the book author</description>
        <label>Author</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Binding__c</fullName>
        <description>Indicates the Format of the Product</description>
        <label>Binding</label>
        <picklist>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD-ROM Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Videodisk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Card Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardcover with DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Reader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video with Booklet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vital Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courses/Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Bound with Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperback with DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobipocket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbound (Saleable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkling eBook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiral Bound with Access Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbound (saleable) with Access Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiral Bound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Media Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Bound with Access Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiralbound with CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Type__c</fullName>
        <description>CORE - Book type from GHEPM / Bookmaster</description>
        <label>Book Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Indicates the Brand for Product from GHEPM</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CTIMGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Field Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Pickilist values for CTI/MGI campuses</description>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category2__c</fullName>
        <description>standalone Category for US HE</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>NY Times Supplement (NC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Warehoused Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daedalus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBook+ upgrade (component)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Supplement (NC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Companion Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Supersite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestGen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBook+ (standalone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CourseSmart (Review Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructors Resource Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Accumulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Management Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Times Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECollege</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Sample</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Core - Book Category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>CORE - Book class</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Company__c</fullName>
        <description>Indicates the Competitor Company from the Product Competitor Feed</description>
        <label>Competitor Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Edition_Status__c</fullName>
        <description>Status for a Competitor Product from the Competitor Status Feed</description>
        <label>Competitor Edition Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_String__c</fullName>
        <formula>IF( Competitor_Product__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Product String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Product is a Competitor Product.</description>
        <label>Competitor Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conferer__c</fullName>
        <description>Picklist of Conferers for CTI/MGI</description>
        <label>Conferer</label>
        <picklist>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSBM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contains_eText__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for eText indicator from the GHEPM</description>
        <label>Contains eText</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>Copyright Year for the Product</description>
        <label>Copyright Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product_String__c</fullName>
        <description>Used by HE mobile App in order to Sync products to the iPad.</description>
        <formula>IF(Custom_Product__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Product String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in US Field Sales to indicate the Custom Product</description>
        <label>Custom Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataHub_Key__c</fullName>
        <description>CORE - Integration fields</description>
        <externalId>true</externalId>
        <label>DataHub Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <description>For SA. Determines if a Qualification is a Part Time Qualification. If so, a warning message is presented in Apttus.</description>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <description>indicates the Delivery Method for a Product from GHEPM</description>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available for Billing/Charge-only ISBN [BNA]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming (3rd-Party Hosted) [SPH]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website/Online Only (Licensed) [OOL]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight to PCL/Not Available for Billing [NAB]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website/Online Only (Free) [OOF]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable ONLY [DOW]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable - DRM [DRM]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehoused AND Downloadable [WHD]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable - Rental [RTL]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehoused [WRH]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming (Tri-Pro Hosted) [STH]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Instock_Date__c</fullName>
        <description>Populated for the Product Family from GHEPM</description>
        <label>Digital Instock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Status__c</fullName>
        <description>Used for the Product Family from the GHEPM</description>
        <label>Digital Status</label>
        <picklist>
            <picklistValues>
                <fullName>AOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TU</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTREN CONSTRUCTION PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Nursing Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Editions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dictionaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regents Professional Resource Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Discounted Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Reference Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount for NAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL/ELT Text Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Reference Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career and Personal Development Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Text Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Computing/Mass Market Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Description Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Text Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Technical Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Examination Review Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Reference Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS-Protected, Non-Discounted Online Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>CORE - Product division from GHEPM / Bookmaster</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Instock_Date__c</fullName>
        <description>if the status is Backorder (not sure of the code) then we show the Due Instock Date else we show the Publish date. Used for the Product Catalog Page</description>
        <label>Due Instock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Type__c</fullName>
        <description>Type of Duration (streaming, downloadable, etc)</description>
        <label>Duration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downloadable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Unit__c</fullName>
        <description>Duration Unit from GHEPM. Used to create value for Duration.</description>
        <label>Duration Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Seconds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Value__c</fullName>
        <description>Used to calculate Duration.</description>
        <label>Duration Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Concatenation from Duration Method, Type, Unit from GHEPM</description>
        <label>Duration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>CORE - Book edition number</description>
        <label>Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Product ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Price_Indicator__c</fullName>
        <description>Calculated from Data Hub</description>
        <label>Final Price Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Free_Copy_Substitute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to free product substitute  product.</description>
        <label>Free Copy Substitute</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Free Copy Substitute)</relationshipLabel>
        <relationshipName>Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Author_and_Affiliation__c</fullName>
        <description>complete list of Authors and Affiliation with Line breaks.</description>
        <label>Full Author and Affiliation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Title__c</fullName>
        <description>CORE - Full book title</description>
        <label>Full Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>CORE - Product Group</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRC_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRC Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRC_Link__c</fullName>
        <label>IRC Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <description>CORE - Book ISBN</description>
        <externalId>true</externalId>
        <label>ISBN13</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Holds the URL for the US HE Image. Used in Product Selector to display the cover image.</description>
        <label>Image</label>
        <type>Url</type>
    </fields>
</CustomObject>